
  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    MAPREDUCE-6436. JobHistory cache issue. (Kai Sasaki via zxu)

    MAPREDUCE-6637. Testcase Failure : TestFileInputFormat.testSplitLocationInfo.
    (Brahma Reddy Battula via wang)

    MAPREDUCE-6622. Add capability to set JHS job cache to a
    task-based limit (rchiang via rkanter)

  OPTIMIZATIONS

  BUG FIXES

    MAPREDUCE-6540. TestMRTimelineEventHandling fails (sjlee)

    MAPREDUCE-5485. Allow repeating job commit by extending OutputCommitter API. 
    (Junping Du via jianhe)

    MAPREDUCE-6377. JHS sorting on state column not working in webUi.
    (zhihai xu via devaraj)

    MAPREDUCE-5883. "Total megabyte-seconds" in job counters is slightly
    misleading (Nathan Roberts via jlowe)

    MAPREDUCE-6583. Clarify confusing sentence in MapReduce tutorial document.
    (Kai Sasaki via aajisaka)

    MAPREDUCE-6554. MRAppMaster servicestart failing with NPE in
    MRAppMaster#parsePreviousJobHistory (Bibin A Chundatt via jlowe)

    MAPREDUCE-6619. HADOOP_CLASSPATH is overwritten in MR container. (Junping
    Du via jianhe)

    MAPREDUCE-6618. YarnClientProtocolProvider leaking the YarnClient thread.
    (Xuan Gong via jlowe)

    MAPREDUCE-6621. Memory Leak in JobClient#submitJobInternal() (Xuan Gong
    via jlowe)

    MAPREDUCE-6413. TestLocalJobSubmission is failing with unknown host
    (zhihai xu via jlowe)

    MAPREDUCE-6191. Improve clearing stale state of Java serialization
                    testcase.  (Sam Liu via Eric Yang)

    MAPREDUCE-6460. TestRMContainerAllocator.
    testAttemptNotFoundCausesRMCommunicatorException fails. (Zhihai Xu)

    MAPREDUCE-6635. Unsafe long to int conversion in UncompressedSplitLineReader
    and IndexOutOfBoundsException. (Junping Du via vvasudev)

    MAPREDUCE-6645. TestWordStats outputs logs under directories other than
    target/test-dir. (Gabor Liptak via aajisaka)

    MAPREDUCE-6580. Test failure: TestMRJobsWithProfiler.